Bugfix for organism + geneset check in chipenrich()
* Incorrect check prevented runs for valid combinations, e.g. mm10 + GO.
* Not sure how this hasn't cropped up in all our runs, but thanks to jamie.gearing for pointing it out.

From: Raymond Cavalcante <cavalcante.raymond@gmail.com>

git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/branches/RELEASE_3_4/madman/Rpacks/chipenrich@127283 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,9 @@
+CHANGES IN VERSION 1.12.1
+-------------------------
+
+  o Fixed a bug in the check for proper organism + geneset combinations. Prevented
+    combinations that are actually valid from running.
+
 CHANGES IN VERSION 1.11.4
 -------------------------
 
